# Copyright 2021 The gRPC Authors
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

load("@grpc_python_dependencies//:requirements.bzl", "requirement")

package(
    default_testonly = 1,
    default_visibility = ["//visibility:public"],
)

py_library(
    name = "framework",
    srcs = glob(["framework/**/*.py"]),
    srcs_version = "PY3",
    data=glob(["kubernetes-manifests/*.yaml"]),
    deps = [
        "//src/proto/grpc/testing:empty_py_pb2",
        "//src/proto/grpc/testing:py_messages_proto",
        "//src/proto/grpc/testing:test_py_pb2_grpc",
        "//src/python/grpcio/grpc:grpcio",
        "//src/python/grpcio_csds/grpc_csds",
        "//src/python/grpcio_channelz/grpc_channelz/v1:grpc_channelz",
        "//src/python/grpcio_health_checking/grpc_health/v1:grpc_health",
        requirement("Mako"),
        requirement("PyYAML"),
        requirement("absl-py"),
        requirement("google-api-python-client"),
        requirement("google-cloud-secret-manager"),
        requirement("kubernetes"),
        requirement("retrying"),
        requirement("tenacity"),
        requirement("protobuf"),
        requirement("xds-protos"),
        "@six",
    ],
)
