# Copyright 2019 The gRPC Authors
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

package(
    default_testonly = 1,
    default_visibility = ["//visibility:public"],
)

py_library(
    name = "_benchmark_proto_deps",
    deps = [
        "//src/proto/grpc/testing:benchmark_service_py_pb2",
        "//src/proto/grpc/testing:benchmark_service_py_pb2_grpc",
        "//src/proto/grpc/testing:py_messages_proto",
    ]
)

py_binary(
    name = "server",
    srcs = ["server.py"],
    python_version = "PY3",
    deps = [
        ":_benchmark_proto_deps",
        "//src/python/grpcio/grpc:grpcio",
    ],
)

py_binary(
    name = "client",
    srcs = ["client.py"],
    python_version = "PY3",
    deps = [
        ":_benchmark_proto_deps",
        "//src/python/grpcio/grpc:grpcio",
    ],
)
